Fix broken test and adjust collapsable controls max height

--- a/webapp/styles/groups/controls.scss
+++ b/webapp/styles/groups/controls.scss
@@ -7,7 +7,7 @@
 
   margin-bottom: 10px;
   width: 100%;
-  max-height: 30%;
+  max-height: 11rem;
 
   z-index: 1;
 
